--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: joshuaavalon
           password: ${{ secrets.PERSONAL_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
