--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: joshuaavalon
           password: ${{ secrets.PERSONAL_TOKEN }}
       - name: Login DockerHub
         uses: docker/login-action@v1
