--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "publish": "semantic-release",
     "start": "node lib/index.js",
     "predev": "npm run build",
-    "dev": "npm run start"
+    "dev": "npm run start",
+    "release": "semantic-release"
   },
   "keywords": [
     "pical"
