--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "prebuild": "rimraf lib",
     "build": "tsc",
     "lint": "eslint --ext .ts src",
-    "publish": "semantic-release",
     "start": "node lib/index.js",
     "predev": "npm run build",
     "dev": "npm run start",
@@ -43,12 +42,14 @@
     "eslint": "^7.13.0",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.2.2",
+    "semantic-release": "^17.2.3",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
+    "@pical/signature": "^1.0.1",
     "dotenv": "^8.2.0",
+    "file-type": "^16.0.1",
     "js-base64": "^3.6.0",
     "koa": "^2.13.0",
     "koa-pino-logger": "^3.0.0",
